--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/column"
+        android:icon="@mipmap/soccerball"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
