--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.google.android.gms:play-services:10.2.0'
     compile 'com.android.support:design:24.2.1'
+    compile 'com.google.firebase:firebase-config:10.2.0'
     compile 'com.google.firebase:firebase-messaging:10.2.0'
     compile 'com.google.firebase:firebase-core:10.2.0'
-    compile 'com.google.firebase:firebase-database:10.2.0'
     compile 'com.google.firebase:firebase-ads:10.2.0'
     compile 'com.android.support:support-v4:24.2.1'
     compile files ('libs/jsoup-1.10.2.jar')
